mysql credential edited

--- a/MySQL_connection_and_queris.ipynb
+++ b/MySQL_connection_and_queris.ipynb
@@ -82,20 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('key.csv')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#3. Build the connection\n",
     "#Note: You should have already created the credential in MYSQL server.\n",
     "\n",
-    "engine = create_engine('mysql+pymysql://'+df.iat[0,0]+':@localhost:51211')\n",
+    "engine = create_engine('mysql+pymysql://'+user+':'+pwd+'@localhost:51211')\n",
     "conn = engine.connect()"
    ]
   },
